force-app/main/default/objects/CampaignMember/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <description>Used in DocuSign API</description>
    <formula>Campaign.Id</formula>
    <inlineHelpText>Used in DocuSign API</inlineHelpText>
    <label>Campaign ID</label>
    <type>Text</type>
</CustomField>