force-app/main/default/objects/CampaignMember/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <description>Used in Docusign API</description>
    <formula>Contact.Id</formula>
    <inlineHelpText>Used in Docusign API</inlineHelpText>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>