force-app/main/default/objects/CampaignMember/fields/et4ae5__Activity__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Sent</fullName>
                
                
                    <label>Sent</label>
                
                </value>
            
                <value>
                
                    <fullName>Unsubscribed</fullName>
                
                
                    <label>Unsubscribed</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>