force-app/main/default/objects/CampaignMember/fields/Launch_Conga__c.field-meta.xml
<CustomField>
    <fullName>Launch_Conga__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; + &quot;a2F0a000001ZWop&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=&quot; + Contact.FirstName + Contact.LastName + &quot; CS Disclosure Form&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=SalesforceFile&quot; + 
&quot;&amp;qmode=SalesforceFile&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Launch Conga</label>
    <type>Text</type>
</CustomField>